[package]
name = "wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = { version = "*", features = ["rwh_05"] }
env_logger = "*"
log = "*"
cfg-if = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.30"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
